# clawpanel

./: CHANGELOG.md  README.md  index.html  openclaw-version-policy.json  package-lock.json  package.json  tsconfig.json  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: json_value.rs  lib.rs  main.rs  single_instance.rs  tray.rs  utils.rs
src-tauri/src/commands/: assistant.rs  cli_conflict.rs  codewhale.rs  codex.rs  command_config_paths.rs  command_http.rs  command_runtime_path.rs  config.rs  device.rs  diagnose.rs  extensions.rs  hermes.rs  hermes_providers.rs  logs.rs  memory.rs  messaging.rs  mod.rs  model_tools.rs  pairing.rs  service.rs  skillhub.rs  skills.rs  update.rs
src-tauri/src/commands/agent/: agent_workspace.rs  mod.rs
src-tauri/src/commands/config/: config_model_common.rs  config_model_response.rs  config_model_runtime.rs  config_model_scan.rs  mod.rs
src-tauri/src/commands/hermes/: hermes_api_server.rs  hermes_dashboard.rs  hermes_dashboard_assets.rs  hermes_dashboard_stub.rs  hermes_env_config.rs  hermes_fs.rs  hermes_lazy_deps.rs  hermes_multi_gateway.rs  hermes_providers.rs  hermes_runtime.rs  hermes_workspace_assets.rs  mod.rs
src-tauri/src/commands/messaging/: messaging_bindings.rs  messaging_channel_actions.rs  messaging_common.rs  messaging_diagnose.rs  messaging_diagnosis_common.rs  messaging_plugins.rs  messaging_verify.rs  mod.rs
src-tauri/src/commands/service/: mod.rs  service_gateway_owner.rs  service_platform.rs  service_platform_linux.rs  service_platform_macos.rs  (+1 more)
src-tauri/src/models/: types.rs
(+305 files in other folders)
