[package]
name = "clawpanel"
version = "0.17.0"
edition = "2021"
description = "智爪多智能体工作台 - OpenClaw 多智能体工作台"
authors = ["qingchencloud"]
repository = "https://ai.aizuopin.com"
homepage = "https://ai.aizuopin.com"
license = "AGPL-3.0"

[lib]
name = "clawpanel_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "6"
chrono = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "gzip", "brotli", "deflate"], default-features = false }
futures-util = "0.3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
urlencoding = "2"
regex = "1"
tokio = { version = "1", features = ["process", "time", "sync"] }

[target.'cfg(unix)'.dependencies]
flate2 = "1"
tar = "0.4"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2"
